# siun

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  example-config.toml  index.html  justfile  pyproject.toml  release.sh  requirements-dev.txt  suggestions.md
.github/workflows/: codeberg-mirror.yml  python-app.yml
docs/src/: siun-check.1.md  siun-news.1.md  siun.1.md  siun.5.md
examples/: config.toml  siun.toml
examples/custom-criteria/: archaudit.py  last_pacman_update.py
examples/pacman/: siun-clear-cache.hook
examples/systemd/: pacman-sync.service  pacman-sync.timer  siun.service  siun.timer
src/pacup/: main.py
src/siun/: __about__.py  __init__.py  __main__.py  check.py  cli.py  cli_utils.py  config.py  criteria.py  errors.py  formatting.py  main.py  models.py  news.py  notification.py  providers.py  state.py  util.py
src/siun/models/: __init__.py  criteria.py  formatting.py  news.py  thresholds.py  updates.py
src/siun/providers/: __init__.py  aur.py  base.py  flatpak.py  generic.py  pacman.py
tests/: __init__.py  conftest.py  test_config.py  test_formatting.py  test_main.py  test_notification.py  test_providers.py  test_state.py
tests/commands/: test_check.py  test_news.py
