[project]
name = "siun"
version = "0.2.5"
description = 'Report urgency of package upgrades'
authors = [
    { name = "Thomas Kager", email = "t4k1t+dev@protonmail.com" },
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.7",
]
readme = "README.md"
requires-python = ">= 3.11"
license = "MIT"

[project.urls]
Documentation = "https://github.com/t4k1t/siun#readme"
Issues = "https://github.com/t4k1t/siun/issues"
Source = "https://github.com/t4k1t/siun"

[project.scripts]
"siun" = "siun.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.4",
    "pytest>=8.3.2",
    "coverage>=7.6.1",
    "basedpyright>=1.17.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/siun"]

[tool.ruff]
line-length = 120

[tool.basedpyright]
ignore = ["tests"]
reportAny = false
reportImplicitOverride = false
reportMissingSuperCall = false

[tool.coverage.run]
source = [
    "src/siun"
]
omit = [
    "src/siun/__main__.py"
]
