[project]
name = "siun"
version = "1.5.1"
description = 'Report urgency of package upgrades'
authors = [{ name = "Thomas Kager", email = "t4k1t+dev@protonmail.com" }]
requires-python = ">= 3.11"
dependencies = ["click>=8.1", "pydantic>=2.7"]
readme = "README.md"
license = "MIT"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Documentation = "https://github.com/t4k1t/siun#readme"
Issues = "https://github.com/t4k1t/siun/issues"
Source = "https://github.com/t4k1t/siun"

[project.scripts]
"siun" = "siun.main:cli"

[project.optional-dependencies]
notification = ["dbus-python>=1.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "ruff>=0.6.4",
  "pytest>=8.3.2",
  "coverage>=7.6.1",
  "basedpyright>=1.17.2",
  "pytest-subprocess>=1.5.3",
  "pyinstrument>=5.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/siun"]

[tool.hatch.build.targets.sdist]
include = ["src/siun", "tests", "CHANGELOG.md", "uv.lock"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "D",
  "DTZ",
  "E",
  "EM",
  "F",
  "G",
  "I",
  "ICN",
  "LOG",
  "PIE",
  "PT",
  "PTH",
  "S",
  "SIM",
  "T20",
  "UP",
  "W",
]
ignore = ["D203", "D212"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "PT006"]
"**/__init__.py" = ["D104"]
"src/siun/errors.py" = ["D107"]
"src/siun/__main__.py" = ["D100"]

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
ignore = ["tests"]
reportAny = false
reportExplicitAny = false
reportImplicitOverride = false
reportMissingSuperCall = false
reportMissingTypeStubs = false
reportUnusedCallResult = false

[tool.pytest.ini_options]
markers = [
  "feature_notification: test which require the optional 'notification' feature",
]

[tool.coverage.run]
source = ["src/siun"]
omit = ["src/siun/__main__.py"]
